[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Assets/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menu/DisplayMenu/DisplayMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Menu/titleLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Menu/simpleLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Assets/MenuBG.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="DisplayMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="MenuBG" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuBase" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -486.0
margin_right = 250.0
margin_bottom = 486.0
rect_min_size = Vector2( 500, 0 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MenuBase"]
margin_right = 500.0
margin_bottom = 972.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuBase/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 922.0
custom_constants/separation = 100
alignment = 1

[node name="Label2" parent="CanvasLayer/MenuBase/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 262.0
margin_right = 400.0
margin_bottom = 319.0
text = "display settings"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuBase/MarginContainer/VBoxContainer"]
margin_top = 419.0
margin_right = 400.0
margin_bottom = 459.0
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MenuBase/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 27.0
margin_right = 373.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_constants/separation = 50

[node name="simpleLabel" parent="CanvasLayer/MenuBase/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]

[node name="FullScreenSlider" type="CheckButton" parent="CanvasLayer/MenuBase/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 270.0
margin_right = 346.0
margin_bottom = 40.0

[node name="BackBtn" type="Button" parent="CanvasLayer/MenuBase/MarginContainer/VBoxContainer"]
margin_left = 100.0
margin_top = 559.0
margin_right = 300.0
margin_bottom = 609.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "back"

[connection signal="toggled" from="CanvasLayer/MenuBase/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/FullScreenSlider" to="." method="_on_FullScreenSlider_toggled"]
[connection signal="pressed" from="CanvasLayer/MenuBase/MarginContainer/VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
